--- a/CineFunciones/peliculaFuncion.css
+++ b/CineFunciones/peliculaFuncion.css
@@ -1,9 +1,13 @@
-
-body{
+*{
     margin: 0;
-    padding: 0;
+    box-sizing: border-box;
 }
 
+body{
+    position: relative;
+    font-family: 'Dosis', sans-serif;
+    top: 75px;
+}
 
 .main{
     display:flow-root;
@@ -12,7 +16,7 @@ body{
 }
 
 .movie-box1{
-    background-color: rgb(41, 2, 66);
+    background-color: #000090;
     height: 200px;
     width: 100%;
 }
@@ -27,11 +31,14 @@ body{
     
 }
 .trailer-day{
+    position: absolute;
+    top: 45%;
+    left: 64%;
     height: 200px;
     width: 30%;
     float: left;
     font-size: 20px;
-    color: #fff;
+    color: #d4af37;
 }
 
 .years{
@@ -47,12 +54,15 @@ body{
     color:rgb(6, 6, 156)
 }
 .trailer-time{
+    position: absolute;
+    top: 45%;
+    left: 80%;
     height: 200px;
     width: 30%;
     float: left;
     text-align: left;
     font-size: 20px;
-    color: #fff;
+    color: #d4af37;
 }
 
 
@@ -147,7 +157,5 @@ h3{
     width: 50%;
     height: 100%;
 }
-
-
 
 
