--- a/templates/register.html
+++ b/templates/register.html
@@ -23,7 +23,7 @@
 		<div class="login-content">
 			<form action="" method="POST" class="formulario" id="formulario">
 				<h1 class="title">Registro</h1>
-<!--
+
 				<div class="input-div one">
                     <div class="i">
                     </div>
@@ -32,7 +32,7 @@
                         <input type="text" name="nombre" id="nombre" class="input" >
                     </div>
                 </div>
--->
+<!--
 				<div class="formulario__grupo" id="grupo__nombre">
 					<label for="nombre" class="formulario__label">Nombre</label>
 					<div class="formulario__grupo-input">
@@ -42,7 +42,7 @@
 					<p class="formulario__input-error">El usuario tiene que ser de 4 a 16 dígitos y solo puede contener numeros, letras y guion bajo.</p>
 				</div>
 
-				<!-- Grupo: Correo Electronico -->
+				 Grupo: Correo Electronico 
 				<div class="formulario__grupo" id="grupo__correo">
 					<label for="correo" class="formulario__label">Correo Electrónico</label>
 					<div class="formulario__grupo-input">
@@ -52,7 +52,7 @@
 					<p class="formulario__input-error">El correo solo puede contener letras, numeros, puntos, guiones y guion bajo.</p>
 				</div>
 
-				<!-- Grupo: Contraseña -->
+				 Grupo: Contraseña 
 				<div class="formulario__grupo" id="grupo__password">
 					<label for="password" class="formulario__label">Contraseña</label>
 					<div class="formulario__grupo-input">
@@ -63,7 +63,7 @@
 					<p class="formulario__input-error">La contraseña tiene que ser de 4 a 12 dígitos.</p>
 				</div>
 
-				<!-- Grupo: Contraseña 2 -->
+				Grupo: Contraseña 2 
 				<div class="formulario__grupo" id="grupo__password2">
 					<label for="password2" class="formulario__label">Repetir Contraseña</label>
 					<div class="formulario__grupo-input">
@@ -73,7 +73,7 @@
 					<p class="formulario__input-error">Ambas contraseñas deben ser iguales.</p>
 				</div>
 				
-<!---
+-->
                 <div class="input-div one">
                     <div class="i">
                     </div>
@@ -109,9 +109,9 @@
             	</div>
             	<a href="/login">Ya tengo cuenta!</a>
                 <p><input type="checkbox" name="conditions">He leido y acepto todos los terminos y condiciones.</p>
-  				<input type="submit" class="btn" value="Registrarse">
-				<button class="btn" type="submit">Registrarse</button>--->
-				<div class="formulario__grupo" id="grupo__terminos">
+  				<!--<input type="submit" class="btn" value="Registrarse">-->
+				<button class="btn" type="submit">Registrarse</button>
+				<!--<div class="formulario__grupo" id="grupo__terminos">
 					<label class="formulario__label">
 						<input class="formulario__checkbox" type="checkbox" name="terminos" id="terminos">
 						Acepto los Terminos y Condiciones
@@ -125,7 +125,7 @@
 				<div class="formulario__grupo formulario__grupo-btn-enviar">
 					<button type="submit" class="formulario__btn">Enviar</button>
 					<p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado exitosamente!</p>
-				</div>
+				</div>-->
             </form>
         </div>
     </div>
