--- a/templates/register.html
+++ b/templates/register.html
@@ -129,7 +129,7 @@
             </form>
         </div>
     </div>
-    <!--<script type="text/javascript" src="{{ url_for('static', filename='js/register.js') }}"></script>-->
-	<script type="text/javascript" src="{{ url_for('static', filename='js/prueba.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/register.js') }}"></script>
+	<!--<script type="text/javascript" src="{{ url_for('static', filename='js/prueba.js') }}"></script>-->
 </body>
 </html>
