Versión del Registro con validación
En esta carga, subiré la pagina de registro con validaciones para que funcione correctamente

--- a/templates/register.html
+++ b/templates/register.html
@@ -29,7 +29,7 @@
                     </div>
                     <div class="div">
                         <h5>Nombre*</h5>
-                        <input type="text" name="nombre" id="nombre" class="input" >
+                        <input type="text" name="nombre" id="nombre" class="input" required>
                     </div>
                 </div>
 <!--
@@ -79,7 +79,7 @@
                     </div>
                     <div class="div">
                         <h5>Apellido*</h5>
-                        <input type="text" name="apellido" id="apellido" class="input" >
+                        <input type="text" name="apellido" id="apellido" class="input" required>
                     </div>
                 </div>
                 <div class="input-div one">
@@ -87,7 +87,7 @@
                     </div>
                     <div class="div">
                         <h5>Correo electronico*</h5>
-                        <input type="email" name="email" id="email" class="input"  >
+                        <input type="email" name="email" id="email" class="input"  required>
                     </div>
                  </div>
                  <div class="input-div one">
@@ -95,7 +95,7 @@
                     </div>
                     <div class="div">
                         <h5>Confirmar correo electronico*</h5>
-                        <input type="text" name="confirmar-email" id="confirmar-email" class="input" >
+                        <input type="email" name="confirmar-email" id="confirmar-email" class="input" required>
                     </div>
                 </div>
            		<div class="input-div pass">
@@ -103,7 +103,7 @@
            		   </div>
            		   <div class="div">
            		    	<h5>Contraseña*</h5>
-           		    	<input type="password" name="password" id="password" class="input">
+           		    	<input type="password" name="password" id="password" class="input" required>
             	   </div>
 				   <button id="show_password" class="btn-primary" type="button" onclick="ShowHidePassword()"> <span class="fas fa-eye-slash icon"></span> </button>
             	</div>
