--- a/peliculaFuncion.css
+++ b/peliculaFuncion.css
@@ -308,13 +308,61 @@ h4{
 }
 
 .movie-box3-2{
-    overflow: auto;
-    white-space: nowrap;
-    padding: 5px 70px 5px 20px;
-    background: transparent;
-    height: 100%;
-    border-radius:15px;
+  
   }
+.comentarios{
+    margin: 20px 0;
+}
+.form-comentarios textarea{
+    width: 100%;
+    height: 80px;
+    max-width: 100%;
+    min-width: 100%;
+    min-height: 84px;
+    max-height: 200px;
+    padding: 10px;
+    line-height: 30px;
+    border: 1px solid #4d65d1;
+    margin-bottom: 20px;
+}
+.form-comentarios .btn-comentario {
+    background-color:#4d65d1;
+    border:0;
+    color: #fff;
+    font-size:15px;
+    width: 80px;
+    height: 30px;
+    cursor: pointer;
+}
+.form-comentarios .btn-comentario:hover {
+    box-shadow: 0px 0px 9px rgb(0,0,0,.35);
+}
+.media{
+    border-top: 1px solid #bfbfbf;
+    padding-top: 20px;
+    margin-top:10px;
+}
+.media img{
+    margin-right: 20px;
+}
+
+.media .nombre{
+    color: #4d65d1;
+    margin-bottom: 0;
+}
+.media .nombre span{
+    font-size: 12px;
+    color: #646464;
+    margin-left: 10px;
+}
+.media .botones{
+    margin-bottom: 10px;
+}
+.media .botones a{
+    color: #acacac;
+    font-size: 14px;
+    margin-left: 20px;
+}
   
 
 
