--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,8 @@
 				<img src="{{ url_for('static', filename='assets/cinta.png') }}">
 			</div>
 		<div class="login-content">
-			<form class="login_form" action='/' method="POST"  name="form" onsubmit="return validated()">
+			<!--onsubmit="return validated()"-->
+			<form class="login_form" action="{{ url_for('login')}}" method="POST"  name="form" >
 				<img src="{{ url_for('static', filename='assets/CineColombia Azul.png') }}">
 				<h1 class="title">Iniciar Sesión</h1>
            		<div class="input-div one">
