--- a/templates/admin.html
+++ b/templates/admin.html
@@ -201,12 +201,14 @@
         <form name="formRegistroUsuario" method="post" action="{{ url_for('actualizar_usuario')}}">
           <div class="modal-body">
             <label for="email1">Correo Electronico</label>
-            <div class="input-group">
-              <input class="form-control" type="email" name="correoActualizar" placeholder="Correo electronico del usuario">
+            <!--<div class="input-group">
+              <input class="form-control" type="email" name="correoActualizar" placeholder="Correo electronico del usuario" >
               <span class="input-group-btn">
-                <button class="btn btn-default glyphicon glyphicon-search" type="button"></button>
+                <button class="btn btn-default glyphicon glyphicon-search" type="button" ></button>
               </span>              
-
+            </div>-->
+            <div class="form-group">
+              <input class="form-control" type="email" name="correoActualizar" placeholder="Correo electronico del usuario" >
             </div>
             <div class="form-group">
               <label for="email1">Nombre completo del usuario</label>
@@ -253,17 +255,15 @@
         <form name="formRegistroUsuario" method="post" action="{{ url_for('eliminar_usuario')}}">
           <div class="modal-body">
             <label for="email1">Correo electronico</label>
-            <div class="input-group">
-              <input class="form-control" type="email" name="correoEliminacion" placeholder="Correo del usuario">
-              <span class="input-group-btn">
-                <button class="btn btn-default glyphicon glyphicon-search" type="button"></button>
-              </span>              
-
+            <div class="form-group">
+              <input class="form-control" type="email" name="correoEliminacion" placeholder="Correo del usuario a eliminar">           
             </div>
+            <!--
             <div class="form-group">
               <label for="email1">Nombre completo del usuario</label>
               <input class="form-control" type="text" placeholder="Nombre del usuario" readonly>              
             </div>
+            -->
           </div>
           <div class="modal-footer border-top-0 d-flex justify-content-center">
             <span class="button btn btn-danger" data-dismiss="modal" aria-label="Close">Cancelar</span>
@@ -367,11 +367,11 @@
         <form name="formRegistroUsuario" method="post" action="{{ url_for('actualizar_pelicula')}}">
           <div class="modal-body">
             <label for="email1">Nombre de la película</label>
-              <div class="input-group">
-              <input class="form-control" type="text" name="editarNombrePelicula" placeholder="Nombre de la película a agregar">              
-              <span class="input-group-btn">
+              <div class="form-group">
+              <input class="form-control" type="text" name="editarNombrePelicula" placeholder="Nombre de la película a editar">              
+              <!--<span class="input-group-btn">
                 <button class="btn btn-default glyphicon glyphicon-search" type="button"></button>
-              </span> 
+              </span> -->
             </div>
             <div class="form-group">
               <label for="email1">Funcion 1</label>
@@ -432,11 +432,11 @@
         <form name="formRegistroUsuario" method="post" action="{{ url_for('eliminar_pelicula')}}">
           <div class="modal-body">
             <label for="email1">Nombre de la película</label>
-              <div class="input-group">
-              <input class="form-control"  name="eliminar_pelicula" type="text" placeholder="Nombre de la película a agregar">              
-              <span class="input-group-btn">
+              <div class="form-group">
+              <input class="form-control"  name="eliminar_pelicula" type="text" placeholder="Nombre de la película a eliminar">              
+              <!--<span class="input-group-btn">
                 <button class="btn btn-default glyphicon glyphicon-search" type="button"></button>
-              </span> 
+              </span>
             </div>
             <div class="form-group">
               <label for="email1">Funcion 1</label>
@@ -453,6 +453,7 @@
             <div class="form-group">
               <label for="email1">Descripción de la película</label>
               <textarea class="form-control" type="textarea" placeholder="Ingrese la descripción o sinopsis de la película" rows="10" readonly></textarea>
+            --> 
             </div> 
           </div>
           <div class="modal-footer border-top-0 d-flex justify-content-center">
@@ -481,7 +482,7 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <form>
+        <form name="formRegistroUsuario" method="post" action="{{ url_for('login')}}">
           <div class="modal-footer border-top-0 d-flex justify-content-center">
             <span class="button btn btn-danger" data-dismiss="modal" aria-label="Close">Cancelar</span>
             <button type="submit" class="btn btn-success">Confirmar</button>
